2002-07-30  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2002-07-29  Chris Demetriou  <cgd@broadcom.com>
	* ld-mips-elf/mips16-1.d: Check that ASE flag is actually set.

	2002-07-26  Richard Sandiford  <rsandifo@redhat.com>
	* ld-mips-elf/mips16-1.d,
	* ld-mips-elf/mips16-1[ab].s: New test.
	* ld-mips-elf/mips-elf.exp: Run it.

2002-07-19  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/sec-1.d: Adjust for changes in padding.
	* ld-mmix/sec-3.d: Ditto.

2002-07-12  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/nodyn4.d, ld-cris/expdyn4.d, ld-cris/comref1.s,
	ld-cris/euwref1.s, ld-cris/expdyn3.d, ld-cris/expdyn2.d,
	ld-cris/expdref1.s: New tests.

2002-07-09  Richard Sandiford  <rsandifo@redhat.com>

        * ld-scripts/dynamic-sections*: New test.

2002-07-09  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/libdso-3.d, ld-cris/dso-3.s, ld-cris/noglob1.s,
	ld-cris/noglob1.d: New tests.

	* ld-cris/libdso-1.d: Tweak for change in size of dynamic sections.

2002-07-03  Alan Modra  <amodra@bigpond.net.au>

	* lib/ld-lib.exp (default_ld_nm): Run nm with LC_ALL=C to ensure
	consistent sorting.
	(run_dump_test): Likewise for objdump/nm/objcopy/readelf.
	* ld-sh/sh64/sh64.exp (run_ld_link_tests): Likewise.

2002-06-29  Hans-Peter Nilsson  <hp@bitrange.com>

	* ld-mmix/sec-8m.d, ld-mmix/sec-8m.s, ld-mmix/sec-8a.s,
	ld-mmix/sec-8b.s, ld-mmix/sec-8d.s: New test.

2002-06-18  Chris Demetriou  <cgd@broadcom.com>

	* ld-mips-elf/empic2-ref.s: Add a missing .end, apparently
	turned up by recent assembler changes.

2002-06-17  Tom Rix  <trix@redhat.com>

	* ld-d10v/d10v.exp: New driver for d10v.
	* ld-d10v/default_layout.d : New test.
	* ld-d10v/regression-001.lt: New test for a linker regression.
	* ld-d10v/linktest-002.lt: New test for run_link_test.
	* ld-d10v/reloc-001.d - reloc-016.d: New tests.

2002-06-11  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* ld-scripts/cross1.t: Add .hash, .dynstr and .dynsym sections to
	script.
