@@ -1,5 +1,5 @@
 #source: dso-2.s
-#as: --pic --no-underscore --em=criself
+#as: --pic --no-underscore
 #ld: --shared -m crislinux
 #objdump: -T
 
