@@ -1,6 +1,6 @@
 #source: dso-1.s
 #source: gotrel1.s --pic
-#as: --no-underscore --em=criself
+#as: --no-underscore
 #ld: -m crislinux tmpdir/libdso-4.so
 #objdump: -T
 
@@ -9,5 +9,5 @@
 # symbol; no --export-dynamic is supposed to be needed.
 
 #...
-[0-9a-f]+ g    DF .text	0+2 dsofn
+[0-9a-f]+ g    DF .text	00000000 dsofn
 #pass
