@@ -1,3 +1,7 @@
+2002-08-15  Hans-Peter Nilsson  <hp@axis.com>
+
+	* ld-cris/libdso-4.d, ld-cris/undef1.d: New test.
+
 2002-07-30  Daniel Jacobowitz  <drow@mvista.com>
 
 	Merge from mainline:
